[package]
name = "street_code_fighter"
version = "0.1.0"
authors = ["Carly Sills <cps41@pitt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["image","mixer"]

[dependencies]
bincode = "1.3.3"
serde = "1.0.117"
serde_derive = "1.0.126"
rand = "0.8.0"
regex = "1"